# prog_lab3

./: CMakeLists.txt  Posled_array.h  Spis_array.h  main.cpp
.github/workflows/: release.yml
